fmarket/src/main/webapp/app/main.css
/* ... */
/*list item appear transition*/
.right-to-middle-effect {
    -webkit-transition: opacity 1000ms ease-in-out, left 500ms ease-in-out;
    -moz-transition: opacity 1000ms ease-in-out, left 500ms ease-in-out;
    -ms-transition: opacity 1000ms ease-in-out, left 500ms ease-in-out;
    -o-transition: opacity 1000ms ease-in-out, left 500ms ease-in-out;
    transition: opacity 1000ms ease-in-out, left 500ms ease-in-out;
    animation: transition-right-to-middle 2s;
}

@keyframes transition-right-to-middle {
    0% {
        left: 100%;
    }
    10% {
        left: 90%;
    }
    20% {
        left: 80%;
    }
    30% {
        left: 70%;
    }
    40% {
        left: 60%;
    }
    50% {
        left: 50%;
    }
    60% {
        left: 40%;
    }
    70% {
        left: 30%;
    }
    80% {
        left: 20%;
    }
    90% {
        left: 10%;
    }
    100% {
        left: 0;
    }
}

/*dropdown animation*/
.dropdown-menu > :first-child {
    margin-top: 5px;
}

.dropdown-menu > :last-child {
    margin-bottom: 5px;
    background-color: #e7e7e7;
    cursor: pointer;
}

.open > .dropdown-menu {
    visibility: visible;
    max-height: 500px;
}

/*application wrapper style*/
.application-wrapper {
    padding-bottom: 98px;
    position: relative;
    min-height: 100vh;
}

.application-wrapper .footer-absolute-wrapper {
    position: absolute;
    background-color: #f8f8f8;
}

.login-background {
    background: url('/staticResorces/registration-background.png');
}

.page-container {
    margin-top: 50px;
}

.page-container .notification-wrapper {
    position: fixed;
    min-width: 100%;
    z-index: 10001;
    top: 8%;
}

.page-container .notification-wrapper .wrapper-inner {
    display: block;
}

.page-container .notification-helper {
    position: relative;
    display: inline-block;
    left: 50%;
    transform: translate(-50%, 0);
}

@keyframes item-animation {
    0% {
        padding-left: 100px;
    }
    100% {
        padding-left: 0px;
    }
}

.ng-for-item {
    animation: item-animation 0.5s;
}

@media (max-width: 990px) {
    .application-wrapper {
        padding-bottom: 299px !important
    }

    .modal .modal-content .modal-body {
        overflow-y: auto;
    }
}

@media (min-width: 768px) {
    .modal-dialog.modal-dialog-very-sm {
        width: 383px;
        margin: 30px auto;
    }

    /*side menu style*/
    .sidenav-mobile {
        height: 100%;
        width: 250px;
        margin-left: -250px;
        position: fixed;
        z-index: 1;
        top: 0;
        left: 0;
        background-color: #111;
        overflow-x: hidden;
        padding-top: 60px;
        transition: margin-left .5s;
        z-index: 1051;
    }

    .sidenav-mobile a {
        padding: 8px 8px 8px 32px;
        text-decoration: none;
        font-size: 25px;
        color: #818181;
        display: block;
        transition: 0.3s
    }

    .sidenav-mobile a:hover, .offcanvas a:focus {
        color: #f1f1f1;
    }

    .sidenav-mobile {
        top: 0;
        right: 25px;
        font-size: 36px !important;
        padding-top: 0px;
    }


}

.thead-inverse {
    background-color: #00a6da;
    color: white;
}

.password-error {
    color: #ab2424;
    padding: 5px 0 5px 0;
    font-size: 12px;
    margin-top: -15px;
}

.checkbox-label {
    color: #777777;
    position: absolute;
    margin-left: 5px;
    font-weight: normal;
}
.remove-left-padding {
    padding-left: 0px;
}

.remove-right-padding {
    padding-right: 0px;
}

.glyphicon.glyphicon-trash {
    color: #ab2424;
    transition: .1s;
}
.padding-botom-15 {
    padding-bottom: 15px;
}

.table .thead-inverse .vertical-align {
    vertical-align: middle;
}

.vertical-align th {
    vertical-align: middle;
}

.table .table-body tr > td.text-left {
    text-align: left
}

.glyphicon.glyphicon-remove {
    color: #ab2424;
    transition: .1s;
}

.glyphicon.glyphicon-remove:hover {
    color: #d53939;
}

.glyphicon.glyphicon-trash:hover {
    color: #d53939;
}

.table > thead > tr > th, .table > tbody > tr > th, .table > tfoot > tr > th, .table > thead > tr > td, .table > tbody > tr > td, .table > tfoot > tr > td {
    padding: 0px;
}

.table .table-body tr > td {
    font-size: 14px;
}

.table .table-body tr > td, th {
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;

    text-align: center;
    vertical-align: middle;
    height: 32px;
}

@media screen and (max-height: 450px) {
    .sidenav {
        padding-top: 15px;
    }

    .sidenav a {
        font-size: 18px;
    }
}

